             Default value is still "Do nothing". Feature request #2954099
  - (zathor) [Settings] added option start the queue at program start.
             Default value is disabled. Feature request #1908749
  - (zathor) [JobUtil] display overwrite confirmation dialog for the output file
             during initial job creation if it is necessary. Feature request #3022005

0.3.5.9
  - (sharktooth) [MainForm.cs] Added a big fat warning about patents and binary files when megui finds updates
  - (sharktooth) [x264] Added 2 new "Force SAR" options
  - (sharktooth) [x264] Enabled Trellis with no-cabac option (requires x264 rev 1703+)
  - (zathor) [FPSChooser] + [TargetSizeSCBox] fixed custom FPS and file size saving
  - (zathor) [LogItem] changed default log type to information
  - (zathor) [HDBDStreamExtractor] HdBrStreamExtractor.txt not created anymore
  - (zathor) [HDStreamExtractorIndexer] improved log handling
  - (zathor) [JobQueue] fixed load context menu option. Bug #3024349
  - (zathor) [MuxWindow] language and video name will be visible during load. Bug #3024349
  - (zathor) [JobQueue] enhanced load handling
  - (zathor) [MeGUISettings] + [UpdateWindow] + [VobSubIndexer] added vobsub.dll
  - (zathor) [VobSubIndexWindow] some cosmetics including option to override detection
  - (zathor) [IFOparser] fixed detection of subtitle streams. Bug #2773128
  - (zathor) [VideoPlayer] fixed "go to frame" button. Bug #2860093
  - (zathor) [HDStreamExtractor] some features could not be extracted. Bug #3037750
  - (zathor) [JobQueue] renamed "load" to "edit"
  - (zathor) [FileIndexer] changed supported file type detection
  - (zathor) [OneClickWindow] + [MainForm]. Only supported files can be used in OneClick. Bug #3032668

0.3.5.8
  - (zathor) enhanced error handling of the profile import. an unsuccessful 
             or interrupted profile update will be marked as still missing.
  - (zathor) [x264Encoder] --min-keyint will not be applied if the default value is used
